--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,10 @@ input[type=submit] {
 	font-size: 15px;
 }
 
+p {
+	font-family: 'Arial', Helvetica Neue, Helvetica, sans-serif;
+}
+
 .header {
 	position: relative;
 	border-bottom: 2px solid #DDDDDD;
@@ -104,12 +108,13 @@ input[type=submit] {
 }
 
 .about-me {
-	font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 	color: #777777;
+	font-family: 'Arial', Helvetica Neue, Helvetica, sans-serif;
 	background-color: white;
 	border: 1px solid #DDDDDD;
 	padding: 15px 25px 0px 25px;
 	margin: 30px 0px 0px 0px;
+	line-height: 25px;
 }
 
 .bio-image {
@@ -248,13 +253,13 @@ input[type=submit] {
 }
 @media (min-width: 768px) and (max-width: 980px) { 
 	.container1 {
-	width: 55%;
-	display: inline-block;
+		width: 55%;
+		display: inline-block;
 	}
 
 	.container2 {
-	width: 40%;
-	display: inline-block;
+		width: 40%;
+		display: inline-block;
 	}
 
 	.wrapper {
